--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@sidebase/nuxt-auth": "0.6.0-rc.1",
     "nuxt": "^3.8.0",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
     "@prisma/client": "5.5.2",
+    "next-auth": "4.21.1",
     "prisma": "^5.5.2"
   }
 }
