--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "5.5.2",
     "next-auth": "4.21.1",
     "prisma": "^5.5.2"
