--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@sidebase/nuxt-auth": "0.6.0-rc.1",
+    "@sidebase/nuxt-auth": "0.6.0",
     "nuxt": "^3.8.0",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.5",
+    "@auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "5.5.2",
     "next-auth": "4.21.1",
     "prisma": "^5.5.2"
